fix bad contrast highlight in dropdown

--- a/angular-src/src/app/components/navbar/navbar.component.css
+++ b/angular-src/src/app/components/navbar/navbar.component.css
@@ -1,3 +1,6 @@
+.nav-item {
+    font-size: 13px;
+}
 .navbar{
 	background-color: #000d1a;
 	color: white;
@@ -7,15 +10,11 @@
 }
 .dropbtn {
     background-color: #000d1a;
-    color: white;
+    color: #999999;
     padding: 10px;
     font-size: 13px;
     border: none;
     cursor: pointer;
-}
-
-.nav-item {
-    font-size: 13px;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -44,16 +43,30 @@
     display: block;
 	
 }
+.dropdown-content a:hover{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+	
+}
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {background-color:  #f2f2f2}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
     display: block;
+	color: black;
+	 
+}
+.dropdown .dropdown-content:hover {
+	color: black;
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-    background-color: #99caff;
+   
+	color: #b3b3b3;
+	
 }
